[gd_scene load_steps=15 format=3 uid="uid://jgu7sgf4741h"]

[ext_resource type="Environment" uid="uid://jvmpkdwaeaq" path="res://scenes/main-environment.tres" id="1_gyj1w"]
[ext_resource type="Script" path="res://scenes/Fuel.gd" id="2_70583"]
[ext_resource type="AudioStream" uid="uid://c3614kk4syd0" path="res://sounds/372251__mpaol2023__standard-emergency-warning-signal-sews.mp3" id="3_ib01m"]
[ext_resource type="AudioStream" uid="uid://6wj37b8e5l7v" path="res://sounds/133100__klankbeeld__horror-ambience-10.wav" id="4_3r8pd"]
[ext_resource type="AudioStream" uid="uid://cdgk58ewybf6l" path="res://sounds/487442__tim_verberne__spaceship-cockpit-ambience-02.wav" id="5_d378m"]
[ext_resource type="AudioStream" uid="uid://b8smno4kmqf27" path="res://sounds/Vivaldi_-_Four_Seasons_1_Spring_mvt_1_Allegro_-_John_Harrison_violin.ogg" id="6_518h7"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="7_yoevu"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="8_vf1yj"]
[ext_resource type="FontFile" uid="uid://biqtga8moh7ah" path="res://fonts/lilita_one_regular.ttf" id="9_ehk0n"]
[ext_resource type="PackedScene" uid="uid://d2g78tpqbyf5g" path="res://objects/enemy.tscn" id="10_38i7r"]
[ext_resource type="MeshLibrary" uid="uid://cxt7f5phd4rvl" path="res://objects/coridor_mesh_library.tres" id="11_o3vlj"]
[ext_resource type="PackedScene" uid="uid://b0nt4n13a6448" path="res://addons/starlight/Stars.tscn" id="15_dji1c"]
[ext_resource type="Script" path="res://addons/starlight/StarGenerator.gd" id="16_r2g7e"]

[sub_resource type="LabelSettings" id="LabelSettings_fpmwk"]
font = ExtResource("9_ehk0n")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_gyj1w")
script = ExtResource("2_70583")

[node name="AlarmSound" type="AudioStreamPlayer" parent="WorldEnvironment"]
stream = ExtResource("3_ib01m")
pitch_scale = 0.28
autoplay = true

[node name="SpookyMusic" type="AudioStreamPlayer" parent="WorldEnvironment"]
stream = ExtResource("4_3r8pd")
volume_db = -80.0
autoplay = true

[node name="AmbientMusic" type="AudioStreamPlayer" parent="WorldEnvironment"]
stream = ExtResource("5_d378m")
volume_db = -30.0
autoplay = true

[node name="HappyMusic" type="AudioStreamPlayer" parent="WorldEnvironment"]
stream = ExtResource("6_518h7")
autoplay = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)

[node name="Player" parent="." node_paths=PackedStringArray("crosshair") instance=ExtResource("7_yoevu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.10259, 13.6106, 12.9564)
crosshair = NodePath("../HUD/Crosshair")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("8_vf1yj")

[node name="Fuel" type="Label" parent="HUD"]
offset_left = 1159.0
offset_top = 628.0
offset_right = 1249.0
offset_bottom = 673.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0.717647, 1)
text = "100%"
label_settings = SubResource("LabelSettings_fpmwk")
vertical_alignment = 2

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)

[node name="Health" type="Label" parent="HUD"]
offset_left = 48.0
offset_top = 627.0
offset_right = 138.0
offset_bottom = 672.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_fpmwk")
vertical_alignment = 2

[node name="Enemies" type="Node" parent="."]

[node name="enemy" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("10_38i7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 2.5, -6)
player = NodePath("../../Player")
value = 10

[node name="Level" type="Node" parent="."]

[node name="GridMap" type="GridMap" parent="Level"]
mesh_library = ExtResource("11_o3vlj")
cell_size = Vector3(5, 5, 5)
data = {
"cells": PackedInt32Array(0, 1, 1441804, 1, 1, 1441804, 1, 2, 1441804, 0, 2, 1441804, 2, 1, 1441797, 3, 1, 1441797, 4, 1, 1441797, 5, 1, 1441799, 6, 1, 1441797, 7, 0, 655365, 7, 1, 1441793, 7, 65535, 2, 1, 0, 2, 65535, 2, 1441794, 0, 0, 1, 2, 2, 1, 2, 3, 655368, 0, 3, 8, 1, 3, 12, 2, 4, 1441793, 0, 4, 655361, 1, 4, 1048584, 65541, 1, 1048579, 65542, 1, 1, 65542, 2, 5, 65542, 3, 5, 65542, 4, 1441793, 65541, 4, 1441797, 65540, 4, 1441797, 65539, 4, 8, 65539, 5, 655362, 65539, 3, 2)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="Decoration" type="Node" parent="."]

[node name="Stars" parent="Decoration" instance=ExtResource("15_dji1c")]
script = ExtResource("16_r2g7e")
size = 10000.0
star_count = 100000
rng_seed = 1234
generate_at_origin = false
shader_params/emission_energy = 5e+08
shader_params/clamp_output = true

[connection signal="update_fuel" from="WorldEnvironment" to="HUD" method="_on_fuel_updated"]
[connection signal="fuel_engine" from="Player" to="WorldEnvironment" method="fuel_engine"]
[connection signal="health_updated" from="Player" to="HUD" method="_on_health_updated"]
[connection signal="enemy_destroyed" from="Enemies/enemy" to="Player" method="on_enemy_destroyed"]
